--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
   height: 3000px;
   background:
-  linear-gradient(red, transparent),
-  linear-gradient(to top left, lime, transparent),
-  linear-gradient(to top right, blue, transparent);
+  linear-gradient(rgb(174, 1, 1), transparent),
+  linear-gradient(to top left, rgb(13, 56, 227), transparent),
+  linear-gradient(to top right, rgb(195, 253, 3), transparent);
 background-blend-mode: screen;
 }
 
@@ -44,7 +44,7 @@ background-blend-mode: screen;
 }
 
 .NavBar {
-  background-image: linear-gradient(120deg, #11ff00 0%, #f90101 100%);
+  background-image: linear-gradient(120deg, #15fc00 0%, #e8f500 100%);
   text-decoration-color: azure;
 }
 
